@@ -8,8 +8,20 @@
 	<name>CoreJava</name>
 
 	<properties>
-		<java-version>1.8</java-version>
+		<java-version>11</java-version>
 	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.10</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<finalName>CoreJava</finalName>
@@ -17,13 +29,37 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>3.8.1</version>
 				<configuration>
 					<source>${java-version}</source>
 					<target>${java-version}</target>
 					<compilerArgument>-Xlint:all</compilerArgument>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
+					<compilerArgs>
+						<!-- from https://medium.com/codefx-weekly/java-9-maven-compile-errors-module-names-kill-switches-73411c511750
+                               <arg> will put arguments that contain a space into quotes before
+                              passing them, which javac doesn't like,
+                              so you'll have to do this
+                              <arg>-add-exports</arg><arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+                              instead of this
+                              <arg>-add-exports java.base/sun.security.util=ALL-UNNAMED</arg>
+                              or you'll get invalid flag: -add-exports java.base/sun.security.util=ALL-UNNAMED
+                        -->
+						<!--<arg>&#45;&#45;add-exports</arg><arg>java.base/sun.security.ssl=ALL-UNNAMED</arg>
+						<arg>&#45;&#45;add-exports</arg><arg>java.base/sun.security.util=ALL-UNNAMED</arg>
+						<arg>&#45;&#45;add-exports</arg><arg>java.base/com.sun.net.ssl.internal.ssl=ALL-UNNAMED</arg>
+						<arg>&#45;&#45;add-exports</arg><arg>java.base/sun.security.jca=ALL-UNNAMED</arg>
+						<arg>&#45;&#45;add-exports</arg><arg>java.base/sun.net.util=ALL-UNNAMED</arg>
+						<arg>&#45;&#45;add-exports</arg><arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+						<arg>&#45;&#45;add-exports</arg><arg>java.base/sun.security.internal.interfaces=ALL-UNNAMED</arg>
+						<arg>&#45;&#45;add-exports</arg><arg>java.base/sun.security.provider.certpath=ALL-UNNAMED</arg>
+						<arg>&#45;&#45;add-exports</arg><arg>java.base/sun.security.internal.spec=ALL-UNNAMED</arg>
+						<arg>&#45;&#45;add-exports</arg><arg>java.base/sun.security.validator=ALL-UNNAMED</arg>
+						<arg>&#45;&#45;add-exports</arg><arg>java.base/sun.security.action=ALL-UNNAMED</arg>-->
+						<arg>--add-exports</arg><arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
+
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
